--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <main>
       <ul class="list-news"></ul>
+      <ul class="list-pages"></ul>
     </main>
 
     <dialog class="filter-dialog">
