Container de editoriais pode receber mais de um editorial

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
       <span class="dialog-close-icon" onclick="closeDialog()">X</span>
     </dialog>
 
-    <footer></footer>
+    <footer>
+      <p>© Prova do segundo bimestre - Programação WEB</p>
+    </footer>
 
     <script src="index.js"></script>
   </body>
