--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       >
         <path d="m 0,0 30,45 0,30 10,15 0,-45 30,-45 Z"></path>
       </svg>
+      <span class="filter-number-container"></span>
     </header>
 
     <main>
